# flow

./: .gitignore  .gitmodules  .travis.yml  Makefile  Makefile.am  attributes.c  clibrary.c  configure.ac  debug.c  module.c  parse.c  picoc.c  table.c  tokens.h  type.c  variable.c
interpreter/: .gitignore  Makefile.am  attributes.c  clibrary.c  debug.c  expression.c  heap.c  include.c  interface.c  interpreter.h  lex.c  module.c  parse.c  picoc.c  platform.c  table.c  type.c  variable.c
interpreter/cstdlib/: ctype.c  errno.c  math.c  stdbool.c  stdio.c  stdlib.c  string.c  time.c  unistd.c
interpreter/platform/: library_unix.c  platform_unix.c
readline/: .gitignore  history.h
t/: .gitignore  40_stdio.flow  Makefile.am  run-test.sh
