TEST_EXTENSIONS = .flow

FLOW_LOG_COMPILER = $(CONFIG_SHELL) $(srcdir)/run-test.sh

TESTS = 00_assignment.flow \
	01_comment.flow \
	02_printf.flow \
	03_struct.flow \
	04_for.flow \
	05_array.flow \
	06_case.flow \
	07_function.flow \
	08_while.flow \
	09_do_while.flow \
	10_pointer.flow \
	11_precedence.flow \
	12_hashdefine.flow \
	13_integer_literals.flow \
	14_if.flow \
	15_recursion.flow \
	16_nesting.flow \
	17_enum.flow \
	18_include.flow \
	19_pointer_arithmetic.flow \
	20_pointer_comparison.flow \
	21_char_array.flow \
	22_floating_point.flow \
	23_type_coercion.flow \
	24_math_library.flow \
	25_quicksort.flow \
	26_character_constants.flow \
	28_strings.flow \
	29_array_address.flow \
	30_hanoi.flow \
	31_args.flow \
	32_led.flow \
	33_ternary_op.flow \
	34_array_assignment.flow \
	35_sizeof.flow \
	36_array_initialisers.flow \
	37_sprintf.flow \
	38_multiple_array_index.flow \
	39_typedef.flow \
	40_stdio.flow \
	41_hashif.flow \
	43_void_param.flow \
	44_scoped_declarations.flow \
	45_empty_for.flow \
	47_switch_return.flow \
	48_nested_break.flow \
	49_bracket_evaluation.flow \
	50_logical_second_arg.flow \
	51_static.flow \
	52_unnamed_enum.flow \
	54_goto.flow \
	55_array_initialiser.flow \
	56_cross_structure.flow \
	57_macro_bug.flow \
	58_return_outside.flow \
	59_break_before_loop.flow \
	60_local_vars.flow \
	61_initializers.flow \
	62_float.flow \
	63_typedef.flow \
	64_double_prefix_op.flow \
	66_printf_undefined.flow \
	67_macro_crash.flow \
	68_return.flow
