TEST_EXTENSIONS = .flow

FLOW_LOG_COMPILER = $(CONFIG_SHELL) $(srcdir)/run-test.sh

TESTS = 00_assignment.flow \
	01_comment.flow \
	02_printf.flow \
	03_struct.flow \
	04_for.flow \
	05_array.flow \
	06_case.flow \
	07_function.flow \
	08_while.flow \
	09_do_while.flow \
	10_pointer.flow \
	11_precedence.flow \
	12_hashdefine.flow \
	13_integer_literals.flow \
	14_if.flow \
	15_recursion.flow \
	16_nesting.flow \
	17_enum.flow \
	18_include.flow \
	19_pointer_arithmetic.flow \
	20_pointer_comparison.flow \
	21_char_array.flow \
	22_floating_point.flow \
	23_type_coercion.flow \
	24_math_library.flow \
	25_quicksort.flow \
	26_character_constants.flow \
	28_strings.flow \
	29_array_address.flow \
	30_hanoi.flow \
	31_args.flow \
	32_led.flow \
	33_ternary_op.flow \
	34_array_assignment.flow \
	35_sizeof.flow \
	36_array_initialisers.flow \
	37_sprintf.flow \
	38_multiple_array_index.flow \
	39_typedef.flow \
	40_stdio.flow \
	41_hashif.flow \
	43_void_param.flow \
	44_scoped_declarations.flow \
	45_empty_for.flow \
	47_switch_return.flow \
	48_nested_break.flow \
	49_bracket_evaluation.flow \
	50_logical_second_arg.flow \
	51_static.flow \
	52_unnamed_enum.flow \
	54_goto.flow \
	55_array_initialiser.flow \
	56_cross_structure.flow \
	57_macro_bug.flow \
	58_return_outside.flow \
	59_break_before_loop.flow \
	60_local_vars.flow \
	61_initializers.flow \
	62_float.flow \
	63_typedef.flow \
	64_double_prefix_op.flow \
	66_printf_undefined.flow \
	67_macro_crash.flow \
	68_return.flow \
	rand0.flow \
	rand1.flow \
	rand2.flow \
	rand3.flow \
	rand4.flow \
	rand5.flow \
	rand6.flow \
	rand7.flow \
	rand8.flow \
	rand9.flow \
	rand10.flow \
	rand11.flow \
	rand12.flow \
	rand13.flow \
	rand14.flow \
	rand15.flow \
	rand16.flow \
	rand17.flow \
	rand18.flow \
	rand19.flow \
	rand20.flow \
	rand21.flow \
	rand22.flow \
	rand23.flow \
	rand24.flow \
	rand25.flow \
	rand26.flow \
	rand27.flow \
	rand28.flow \
	rand29.flow \
	rand30.flow \
	rand31.flow \
	rand32.flow \
	rand33.flow \
	rand34.flow \
	rand35.flow \
	rand36.flow \
	rand37.flow \
	rand38.flow \
	rand39.flow \
	rand40.flow \
	rand41.flow \
	rand42.flow \
	rand43.flow \
	rand44.flow \
	rand45.flow \
	rand46.flow \
	rand47.flow \
	rand48.flow \
	rand49.flow \
	rand50.flow \
	rand51.flow \
	rand52.flow \
	rand53.flow \
	rand54.flow \
	rand55.flow \
	rand56.flow \
	rand57.flow \
	rand58.flow \
	rand59.flow \
	rand60.flow \
	rand61.flow \
	rand62.flow \
	rand63.flow \
	rand64.flow \
	rand65.flow \
	rand66.flow \
	rand67.flow \
	rand68.flow \
	rand69.flow \
	rand70.flow \
	rand71.flow \
	rand72.flow \
	rand73.flow \
	rand74.flow \
	rand75.flow \
	rand76.flow \
	rand77.flow \
	rand78.flow \
	rand79.flow \
	rand80.flow \
	rand81.flow \
	rand82.flow \
	rand83.flow \
	rand84.flow \
	rand85.flow \
	rand86.flow \
	rand87.flow \
	rand88.flow \
	rand89.flow \
	rand90.flow \
	rand91.flow \
	rand92.flow \
	rand93.flow \
	rand94.flow \
	rand95.flow \
	rand96.flow \
	rand97.flow \
	rand98.flow \
	rand99.flow \
	rand100.flow \
	rand101.flow \
	rand102.flow \
	rand103.flow \
	rand104.flow \
	rand105.flow \
	rand106.flow \
	rand107.flow \
	rand108.flow \
	rand109.flow \
	rand110.flow
